--- a/food.html
+++ b/food.html
@@ -35,13 +35,13 @@
       <div class="col-12 d-flex justify-content-start bg-primary">
         <ul class="nav nav-pills fw-bold my-5 ms-8">
           <li class="nav-item">
-            <a class="nav-link active text-dark" href="rentBack.html">自行車租還</a>
+            <a class="nav-link text-dark" href="rentBack.html">自行車租還</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" href="bikeLane.html">自行車道</a>
+            <a class="nav-link  text-dark" href="bikeLane.html">自行車道</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" href="food.html">餐廳美食</a>
+            <a class="nav-link active text-dark" href="food.html">餐廳美食</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-dark" href="spots.html">觀光景點</a>
