--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <a class="nav-link text-white" href="rentBack.html">自行車租還站點</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">自行車道查詢</a>
+                    <a class="nav-link text-white" href="bikeLane.html">自行車道查詢</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">周邊美食景點</a>
+                    <a class="nav-link text-white" href="food.html">周邊美食景點</a>
                   </li>
                 </ul>
                   <div class="col-11 col-md-8 d-flex flex-column justift-content-center">
@@ -64,7 +64,7 @@
 
 </div>
 <!--Footer-->
-<footer class="bg-primary text-center d-flex align-items-center fixed-bottom">
+<footer class="bg-primary text-center d-flex align-items-center fixed-bottom" style="height: 40px;">
   <div class="container">
     <p class="fs-2 mb-0">#The F2E Week02 #Design by Breafast | #Code by AmberCYT</p>
   </div>
