--- a/spots.html
+++ b/spots.html
@@ -17,7 +17,7 @@
 
 <body class="bg-dark">
   <div class="wrapper">
-  <nav class="navbar navbar-light">
+  <nav class="navbar navbar-light px-7">
       <h1><a href="./index.html" class="navLogo navbar-brand ">Urban Chaser</a></h1>
       <div class="input-group" style="width: 500px;">
         <input type="search" class="form-control" placeholder="Search" aria-label="aria-label="Search">
