--- a/rentBack.html
+++ b/rentBack.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Urban Chaser</title>
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   <link rel="stylesheet" href="./css/all.css">
   <!--Material icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -77,7 +78,7 @@
             <span>可租車輛</span>
           </div>
           <div class="park">
-            <img src="./assets/park.png" alt="可租車輛icon">
+            <img src="./assets/park.png" alt="可停空位icon">
             <span>可停空位</span>
           </div>
         </div>
@@ -88,7 +89,7 @@
         <div class="col-12 d-flex justify-content-center">
           <div class="card" style="width: 90%;">
             <div class="card-body">
-              <h5 class="card-title">YouBike2.0_捷運台北101/世貿站(5號出口)</h5>
+              <h5 class="card-title fw-bold">YouBike2.0_捷運台北101/世貿站(5號出口)</h5>
               <div class="d-flex justify-content-between mb-5"> 
                 <p class="text-info d-flex justify-content-center mb-0">
                   <span class="material-icons text-info">
@@ -115,7 +116,7 @@
         <div class="col-12 d-flex justify-content-center">
           <div class="card" style="width: 90%;">
             <div class="card-body">
-              <h5 class="card-title">YouBike2.0_捷運台北101/世貿站(5號出口)</h5>
+              <h5 class="card-title fw-bold">YouBike2.0_捷運台北101/世貿站(5號出口)</h5>
               <div class="d-flex justify-content-between mb-5"> 
                 <p class="text-info d-flex justify-content-center mb-0">
                   <span class="material-icons text-info">
@@ -142,7 +143,7 @@
         <div class="col-12 d-flex justify-content-center">
           <div class="card" style="width: 90%;">
             <div class="card-body">
-              <h5 class="card-title">YouBike2.0_捷運台北101/世貿站(5號出口)</h5>
+              <h5 class="card-title fw-bold">YouBike2.0_捷運台北101/世貿站(5號出口)</h5>
               <div class="d-flex justify-content-between mb-5"> 
                 <p class="text-info d-flex justify-content-center mb-0">
                   <span class="material-icons text-info">
